# rustygen

./: .gitignore  Cargo.toml  README.md
examples/: chess.rs  simple.rs
src/: agent.rs  assistants.rs  lib.rs  record.rs
src/assistants/: chatgpt.rs  chess.rs  gpt.rs
src/control_flow/: error.rs  mod.rs  while.rs
